regression_tests/snap/check/testpb2/testpb2.err
================================================================================

                      PROGRAM SNAP  Version 2.7.14-3f3f047

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Sep  5 2018 13:25:47

================================================================================
                     Run at  7-SEP-2018 09:39:24 by ccrook




================================================================================
                                                             7-SEP-2018 09:39:24

                                 ERROR SUMMARY

================================================================================

Error: Missing or invalid projection - check #projection in data file
       Line: 8  File: testpb1.dat

Error: Missing or invalid projection - check #projection in data file
       Line: 16  File: testpb1.dat

Error: 2 errors reported reading the data files
